# InvertedPendulumSimulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clang-format.txt
jupyter/: Quality of Control.ipynb
networked_control_system/: controller_pid.cpp  marshaling.cpp  marshaling.h  plant.cpp  socket_utils.h
networked_control_system/jupyter/: Quality of Control.ipynb
scripts/: lqr_gains.mat  run-s1.sh  run-s2.sh  run.sh
src/: CMakeLists.txt
src/apps/: controller_pid.cc  marshaling.cc  marshaling.h  ncs-controller.cc  ncs-plant.cc  plant.cc  simulate-agv.cc  simulate-event_queue.cc  simulate-lqr-position_angle.cc  simulate-lqr.cc  simulate-pid.cc  simulate-position_angle.cc  simulate.cc  visualization-dualview.cc  visualization.cc
src/apps/jupyter/: Quality of Control.ipynb  compute_median-5g_3a.ipynb  compute_median-ND_5_5.ipynb  compute_median-wired.ipynb  compute_median_5g_1.ipynb  compute_median_5g_2a.ipynb  compute_median_ND_10_2.ipynb  compute_median_ND_10_5.ipynb  compute_median_pdc23_5_5.ipynb
src/apps/jupyter/.ipynb_checkpoints/: Quality of Control-checkpoint.ipynb
src/controller/: lqr.cc  lqr.h  pid.cc  pid.h
src/events/: event.h  event_queue.cc  event_queue.h  event_receiver.h
src/inverted_pendulum/: inverted_pendulum.cc  inverted_pendulum.h
src/netutils/: socket_utils.cc
